--- a/static/styles.css
+++ b/static/styles.css
@@ -9,17 +9,24 @@
   h3 {
     @apply text-lg;
   }
-  a:hover {
-    @apply text-blue-600 underline;
-  }
   * {
-    @apply text-white;
+    @apply text-white decoration-primary-100
   }
 }
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .gradient-text-1 {
+    @apply bg-gradient-to-r from-blue-500 to-purple-500 bg-clip-text text-transparent
+  }
+}
 
+.bg-clip-text {
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
+}
 
 .gradient-grid {
   background-image: radial-gradient(
